Calling clear on List.of() collections seems to be a bad plan.