@@ -4,6 +4,7 @@ package com.yahoo.collections;
 import java.util.AbstractMap;
 import java.util.AbstractSet;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
@@ -128,7 +129,7 @@ public abstract class LazyMap<K, V> implements Map<K, V> {
 
         @Override
         public Set<Entry<K, V>> entrySet() {
-            return Set.of();
+            return Collections.emptySet();
         }
     }
 
